--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
     <p>hi outside the main div</p>
     <p>sibling of div</p>
     <p>sibling 2 of div</p>
+    <h2>create a branch</h2>
+    <h3>create a branch</h3>
 </body>
 </html>
