last commit done

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <p>hi outside the main div</p>
     <p>sibling of div</p>
     <p>sibling 2 of div</p>
-    <p>last commit</p>
+    <p>last commit done</p>
 </body>
 </html>
