--- a/user fetch/index.html
+++ b/user fetch/index.html
@@ -6,10 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container"><h2></h2></div>
-    <div id="disp"></div>
-    <button id="btn">get data</button>
-
+    <button id="fetch-button">Get data</button>
+    <div id="data"></div>
+    <script src="script.js"></script>
 </body>
-<script src="index.js"></script>
 </html>
