--- a/fileimport/index.html
+++ b/fileimport/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <div class="container"><h2></h2></div>
-    <div id="disp"></div>
-    <button id="btn">get data</button>
 
+<body>
+
+    
+    <script src="main.js" type="module"></script>
 </body>
-<script src="index.js"></script>
 </html>
